--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -3,10 +3,10 @@ on:
   - push
 jobs:
   dire_bonjour:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           sparse-checkout: .
       - run: ls -l # Liste les fichier du répertoire courant
-      - run: cat README.md # Affiche le contenu du fichier `README.md` à la base du dépôt
+      - run: cat README.md | cowsay # Affiche le contenu du fichier `README.md` à la base du dépôt
