--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -8,5 +8,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           sparse-checkout: .
+      - uses: mscoutermarsh/cowsays-action@master
       - run: ls -l # Liste les fichier du répertoire courant
-      - run: cat README.md | cowsay # Affiche le contenu du fichier `README.md` à la base du dépôt
+      - run: cat README.md | cowsay
