--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -8,6 +8,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           sparse-checkout: .
-      - uses: mscoutermarsh/cowsays-action@master
+      - run: |
+          sudo apt-get update
+          sudo apt-get install --yes cowsay
       - run: ls -l # Liste les fichier du répertoire courant
       - run: cat README.md | cowsay
