--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -8,8 +8,5 @@ jobs:
       - uses: actions/checkout@v4
         with:
           sparse-checkout: .
-      - run: |
-          sudo apt-get update
-          sudo apt-get install --yes cowsay
-      - run: ls -l # Liste les fichier du répertoire courant
-      - run: cat README.md | cowsay
+      - run: npm install
+      - run: npm run lint
