--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -6,9 +6,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
         with:
           sparse-checkout: .
-          node_version: '1.0.0'
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 1.0.0
       - run: npm install
       - run: npm run lint
