Edit Workflow to fit gitpod

--- a/.github/workflows/bonjour.yml
+++ b/.github/workflows/bonjour.yml
@@ -3,13 +3,11 @@ on:
   - push
 jobs:
   dire_bonjour:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
+    container:
+      image: ghcr.io/dduportal/esgi-gitpod
+      options: --user=root
     steps:
       - uses: actions/checkout@v4
-        with:
-          sparse-checkout: .
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 19
       - run: npm install
       - run: npm run lint
